[workspace]
members = ["rdnsx-core", "rdnsx"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RDNSx Contributors"]
license = "MIT"
repository = "https://github.com/Quinas-Project/RDNSx"
documentation = "https://docs.rs/rdnsx"
keywords = ["dns", "resolver", "network", "security"]
categories = ["network-programming", "command-line-utilities"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# DNS
hickory-resolver = { version = "0.24", features = ["dns-over-rustls", "dns-over-https-rustls", "dns-over-tls", "dns-over-https", "system-config"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency
dashmap = "5.5"
futures = "0.3"
parking_lot = "0.12"

# Utilities
regex = "1.10"
ipnetwork = "0.21"
chrono = { version = "0.4", features = ["serde"] }

# Database exports
elasticsearch = { version = "9.1.0-alpha.1", features = ["native-tls"] }
mongodb = "3.4"
scylla = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
