[package]
name = "rdnsx-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core DNS toolkit library for fast and efficient DNS resolution"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
hickory-resolver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
ipnetwork = { workspace = true }
chrono = { workspace = true }
elasticsearch = { workspace = true }
mongodb = { workspace = true }
scylla = { workspace = true }
async-trait = "0.1"
hex = "0.4"
rand = "0.8"
toml = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-tls"] }
ureq = { version = "2.5", features = ["json"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.35", features = ["rt", "macros"] }